Replace `%libcxx_include` with `%libcxx_includes` for multi-include directories
To support multiple include directories for c++ header files, use
`%libcxx_includes`. This string contains the `-I` compiler directive for
each include path as well.

Update test cases to use new directive.

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -162,8 +162,11 @@ config.substitutions.append(
   ('%gentmp', os.path.join(klee_src_root, 'scripts/genTempFiles.sh'))
 )
 
+# Prepare the full include expression, i.e. for all given paths. For example, ["path1","path2"]
+# becomes "-I path1 -I path2"
 config.substitutions.append(
-    ('%libcxx_include', getattr(config, 'libcxx_include_dir', None)))
+    ('%libcxx_includes', " ".join( ["-I "+ p for p in getattr(config, 'libcxx_include_dirs', [])] ))
+    )
 
 # Add feature for the LLVM version in use, so it can be tested in REQUIRES and
 # XFAIL checks. We also add "not-XXX" variants, for the same reason.
