Explicitly build KLEE's exception handling runtime with C++11
Currently, we assume C++11 support being used to by the tested software.
This needs to change if newer C++ standards should be supported.

--- a/runtime/klee-eh-cxx/CMakeLists.txt
+++ b/runtime/klee-eh-cxx/CMakeLists.txt
@@ -17,6 +17,7 @@ set(ADDITIONAL_CXX_FLAGS
         -I "${KLEE_LIBCXXABI_SRC_DIR}/src"
         -I "${KLEE_LIBCXXABI_SRC_DIR}/include"
         -I "${KLEE_LIBCXX_INCLUDE_PATH}"
+        -std=c++11
 )
 
 if (KLEE_LIBCXX_PLATFORM_INCLUDE_PATH)
