--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -139,7 +139,7 @@ if len(kleaver_extra_params) != 0:
 # If a tool's name is a prefix of another, the longer name has
 # to come first, e.g., klee-replay should come before klee
 subs = [ ('%kleaver', 'kleaver', kleaver_extra_params),
-         ('%klee-ptree', 'klee-ptree', ''),
+         ('%klee-exec-tree', 'klee-exec-tree', ''),
          ('%klee-replay', 'klee-replay', ''),
          ('%klee-stats', 'klee-stats', ''),
          ('%klee-zesti', 'klee-zesti', ''),
