add pythonpath to lit forwarded env vars

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -78,6 +78,10 @@ addEnv('TSAN_OPTIONS')
 addEnv('C_INCLUDE_PATH')
 addEnv('CPLUS_INCLUDE_PATH')
 
+# Without an appropriate `PYTHONPATH`, the various python-based tools, such as
+# `klee-stats` might not be able to resolve the python packages they depend on
+addEnv('PYTHONPATH')
+
 # Check that the object root is known.
 if config.test_exec_root is None:
   lit_config.fatal('test execution root not set!')
