TARGET_TRIPLE was renamed to LLVM_TARGET_TRIPLE since LLVM 15

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,7 +16,12 @@ set(LLVMCC "${LLVMCC} -I${CMAKE_SOURCE_DIR}/include")
 set(LLVMCXX "${LLVMCXX} -I${CMAKE_SOURCE_DIR}/include")
 set(NATIVE_CC "${CMAKE_C_COMPILER} ${CMAKE_C_FLAGS} -I ${CMAKE_SOURCE_DIR}/include")
 set(NATIVE_CXX "${CMAKE_CXX_COMPILER} ${CMAKE_CXX_FLAGS} -I ${CMAKE_SOURCE_DIR}/include")
-set(TARGET_TRIPLE "${TARGET_TRIPLE}")
+
+if (${LLVM_VERSION_MAJOR} GREATER_EQUAL 15)
+   set(TARGET_TRIPLE "${LLVM_TARGET_TRIPLE}")
+else()
+   set(TARGET_TRIPLE "${TARGET_TRIPLE}")
+endif()
 
 # Extend native compiler invocation on macOS to point to the currently selected systems directory
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
