--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -282,6 +282,7 @@ add_subdirectory(TreeStream)
 add_subdirectory(DiscretePDF)
 add_subdirectory(Time)
 add_subdirectory(RNG)
+add_subdirectory(unittestsmark)
 
 # Set up lit configuration
 set (UNIT_TEST_EXE_SUFFIX "Test")
