--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,4 +49,4 @@ jobs:
         env: ${{ matrix.env }}
         run: scripts/build/build.sh klee --docker --create-final-image
       - name: Run tests
-        run: scripts/build/run-tests.sh
+        run: scripts/build/run-tests.sh --run-docker --debug
