--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -282,7 +282,9 @@ add_subdirectory(TreeStream)
 add_subdirectory(DiscretePDF)
 add_subdirectory(Time)
 add_subdirectory(RNG)
-add_subdirectory(unittestsmark)
+add_subdirectory(deadlockmark)
+add_subdirectory(racecondmark)
+add_subdirectory(undefined_behaviour_mark)
 
 # Set up lit configuration
 set (UNIT_TEST_EXE_SUFFIX "Test")
