--- a/unittests/racecondmark/CMakeLists.txt
+++ b/unittests/racecondmark/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_klee_unit_test(marktest3
   racecond.cpp)
+target_link_libraries(ExprTest PRIVATE kleaverExpr kleeSupport kleaverSolver)
 target_compile_definitions(marktest3 PRIVATE ${KLEE_COMPONENT_CXX_DEFINES})
 target_compile_options(marktest3 PRIVATE ${KLEE_COMPONENT_CXX_FLAGS})
 target_include_directories(marktest3 PRIVATE ${KLEE_INCLUDE_DIRS})
