--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,3 +50,5 @@ jobs:
         run: scripts/build/build.sh klee --docker --create-final-image
       - name: Run tests
         run: scripts/build/run-tests.sh --run-docker --debug
+      - name: Run my tests
+        run: scripts/build/testbuilder.sh --run-docker --debug
