--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -152,6 +152,7 @@ jobs:
     runs-on: macos-latest
     env:
       BASE: /tmp
+      LLVM_VERSION: 13
       SOLVERS: STP
       UCLIBC_VERSION: 0
       USE_TCMALLOC: 0
