Add support for x86_64 and arm targets to lit testing

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -221,6 +221,12 @@ if config.enable_libcxx:
 if config.enable_eh_cxx:
   config.available_features.add('eh-cxx')
 
+# Architectures supported
+supported_archs = ['x86_64', 'arm']
+for arch in supported_archs:
+  if config.target_triple.find(arch) != -1:
+    config.available_features.add(arch)
+
 # Target operating system features
 supported_targets = ['linux', 'darwin', 'freebsd']
 for target in supported_targets:
