Disable libcxx support from LLVM 11 & 12, as it does not really work. For instance, __config_site is placed in ./libc++-build-120/projects/libcxx/ which is unsupported by our scripts in p-libcxx.inc

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,9 +69,11 @@ jobs:
           - name: "LLVM 12"
             env:
               LLVM_VERSION: 12
+              USE_LIBCXX: 0
           - name: "LLVM 11"
             env:
               LLVM_VERSION: 11
+              USE_LIBCXX: 0
           # Sanitizer builds. Do unoptimized build otherwise the optimizer
           # might remove problematic code
           - name: "ASan"
