Use a virtual environment for Python3 while testing under MacOS
With Python3.12, brew requires a virtualenv for external python packages.
Setup and use such an environment for testing under MacOS.

While there is a `tabulate` package in brew, installing it won't install the library only the command line tool `tabulate`.
Therefore, we install `tabulate` via `pip install`.

Remove unnecessary package upgrade.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -148,10 +148,12 @@ jobs:
         run: brew install bash
       - name: Checkout KLEE source code
         uses: actions/checkout@v4
+      - name: Create virtualenv for Python3 (PEP 668)
+        run:  python3 -m venv .venv
       - name: Build KLEE
-        run: scripts/build/build.sh klee --debug --install-system-deps
+        run:  source .venv/bin/activate && echo "$(which tabulate)" && scripts/build/build.sh klee --debug --install-system-deps
       - name: Run tests
-        run: scripts/build/run-tests.sh /tmp/klee_build* --debug
+        run:  source .venv/bin/activate && scripts/build/run-tests.sh /tmp/klee_build* --debug
 
   Docker:
     runs-on: ubuntu-latest
