Allow user to provide specific location where to search for the lit tool via LIT_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -667,7 +667,7 @@ if (ENABLE_UNIT_TESTS OR ENABLE_SYSTEM_TESTS)
   find_program(
     LIT_TOOL
     NAMES ${LIT_TOOL_NAMES}
-    HINTS "${LLVM_TOOLS_BINARY_DIR}"
+    HINTS "${LLVM_TOOLS_BINARY_DIR}" "${LIT_DIR}"
     DOC "Path to lit tool"
   )
 
