Remove CI run for STP master while STP build issues are resolved

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,7 @@ jobs:
           "MSan",
           "Z3 only",
           "metaSMT",
-          "STP master",
+#          "STP master",
           "Latest klee-uclibc",
           "Asserts disabled",
           "No TCMalloc, optimised runtime",
@@ -105,10 +105,10 @@ jobs:
               METASMT_DEFAULT: STP
               REQUIRES_RTTI: 1
           # Test we can build against STP master
-          - name: "STP master"
-            env:
-              SOLVERS: STP
-              STP_VERSION: master
+#          - name: "STP master"
+#            env:
+#              SOLVERS: STP
+#              STP_VERSION: master
           # Check we can build latest klee-uclibc branch
           - name: "Latest klee-uclibc"
             env:
