--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -114,9 +114,7 @@ jobs:
         env: ${{ matrix.env }}
         run: scripts/build/build.sh klee --docker --create-final-image
       - name: Run tests
-        run: | # XXX: Workaround for https://github.com/llvm/llvm-project/issues/78354
-             sudo sysctl vm.mmap_rnd_bits=28
-             scripts/build/run-tests.sh --run-docker --debug
+        run: scripts/build/run-tests.sh --run-docker --debug
 
   macOS:
     runs-on: macos-latest
